--- a/config.json
+++ b/config.json
@@ -16,15 +16,15 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "𝐂𝐘𝐁𝐄𝐑 ☢️_𖣘 -𝐁𝐎𝐓 ⚠️",
+    "BOTNAME": "SHOHAG VAII ☢ 𝐁𝐎𝐓 ⚠️",
     "PREFIX": "/",
     "ADMINBOT": [
-        "100000478146113",
-        "61576520552554",
-        "61550035211214"
+        "100005595642847",
+        "100005595642847",
+        "100005595642847"
     ],
     "NDH": [
-        "100000478146113"
+        "100005595642847"
     ],
     "DATABASE": {
         "sqlite": {
